package poderes;

public interface IPower {
    public void usarPoder();
}