package poderes;

public class PoderEntregaRapida implements IPower {
    public PoderEntregaRapida() {
    }
    @Override
    public void usarPoder() {
        System.out.println("Entrega rapida activada >>>>>>>>>>>>>>>>>>>>>>>>>.");
    }
}
