package poderes;

public class PoderOrganizacion implements IPower {
    public PoderOrganizacion() {
    }

    @Override
    public void usarPoder() {
        System.out.println("Organizacion activada ########################.");
    }
}