package poderes;

public class Podercurarcion implements IPower {
	public Podercurarcion() {
	}

	@Override
	public void usarPoder() {
		System.out.println("Curacion activada ++++++++++++++++++++++++.");
	}
}
