package poderes;

public class Podervolar implements IPower {
	public Podervolar() {
	}

	@Override
	public void usarPoder() {
		System.out.println("Volar activado ~~~~~~~~~~~~~~~~~~~~.");
	}
}
